@@ -100,9 +100,9 @@ name|http
 operator|.
 name|impl
 operator|.
-name|client
+name|conn
 operator|.
-name|DefaultHttpClient
+name|PoolingClientConnectionManager
 import|;
 end_import
 
@@ -116,11 +116,9 @@ name|http
 operator|.
 name|impl
 operator|.
-name|conn
+name|client
 operator|.
-name|tsccm
-operator|.
-name|ThreadSafeClientConnManager
+name|DefaultHttpClient
 import|;
 end_import
 
@@ -357,7 +355,7 @@ argument_list|)
 expr_stmt|;
 name|assertEquals
 argument_list|(
-name|ThreadSafeClientConnManager
+name|PoolingClientConnectionManager
 operator|.
 name|class
 argument_list|,
@@ -376,7 +374,7 @@ literal|22345
 argument_list|,
 operator|(
 operator|(
-name|ThreadSafeClientConnManager
+name|PoolingClientConnectionManager
 operator|)
 name|client
 operator|.
@@ -394,7 +392,7 @@ literal|32345
 argument_list|,
 operator|(
 operator|(
-name|ThreadSafeClientConnManager
+name|PoolingClientConnectionManager
 operator|)
 name|client
 operator|.
