@@ -48,22 +48,6 @@ name|org
 operator|.
 name|apache
 operator|.
-name|http
-operator|.
-name|impl
-operator|.
-name|client
-operator|.
-name|DefaultHttpClient
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
 name|solr
 operator|.
 name|client
@@ -87,6 +71,22 @@ end_import
 begin_comment
 comment|/*  * Licensed to the Apache Software Foundation (ASF) under one or more  * contributor license agreements.  See the NOTICE file distributed with  * this work for additional information regarding copyright ownership.  * The ASF licenses this file to You under the Apache License, Version 2.0  * (the "License"); you may not use this file except in compliance with  * the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
 end_comment
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|params
+operator|.
+name|ModifiableSolrParams
+import|;
+end_import
 
 begin_comment
 comment|/**  * Test the LBHttpSolrServer.  */
@@ -115,9 +115,14 @@ init|=
 operator|new
 name|LBHttpSolrServer
 argument_list|(
+name|HttpClientUtil
+operator|.
+name|createClient
+argument_list|(
 operator|new
-name|DefaultHttpClient
+name|ModifiableSolrParams
 argument_list|()
+argument_list|)
 argument_list|,
 operator|(
 name|ResponseParser
@@ -157,9 +162,14 @@ operator|=
 operator|new
 name|LBHttpSolrServer
 argument_list|(
+name|HttpClientUtil
+operator|.
+name|createClient
+argument_list|(
 operator|new
-name|DefaultHttpClient
+name|ModifiableSolrParams
 argument_list|()
+argument_list|)
 argument_list|,
 name|parser
 argument_list|)
